<resources>
    <string name="app_name">Transcare</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--<string name="title_activity_home">HomeActivity</string>-->
    <string name="rupeetext">\u20B9</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="diabetes_and_health_wellness">Diabetes and Health Wellness</string>
    <string name="action_settings">Settings</string>
    <string name="ortext">or</string>
    <string name="set_up_your_health">Set Up Your Health Profile</string>
    <string name="spinner_title">SEX    </string>
    <string name="YOUR_API_KEY">AIzaSyChdSLNQnabzX66uEBxCWEI9lOqqiajZY4 </string>
    <string-array name="Gender">
        <item>male</item>
        <item>female</item>
        <item>other</item>
    </string-array>
    <string name="slider1_text">Labs that not only analyses but alters you</string>
    <string name="slider2_text">Sample &amp; reports anywhere / anytime</string>
    <string name="slider3_text">Customized health packages that suit you  /Critical call alters for test that matter</string>
    <string name="slider4_text">Reputed clinicians, pathologists and advisors</string>
    <string name="slider5_text">High quality preciuse and specizesd daignostic platforms</string>
    <string name="transcaretext">What is Transcare</string>

    <string name="location_text">location 55 sector chandigarh</string>
    <string name="profile_complete_text">Your Profile is 78% Complete</string>


    <string name="title_activity_home">HomeActivity</string>


    <string name="personal_information">Personal Information</string>
    <string name="personal_information1">Person Name</string>
    <string name="your_full_name">Your Full Name</string>
    <string name="address">Address</string>
    <string name="your_email">Your Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="edit_profile">edit profile</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="optional">Optional :</string>
    <string name="_6_7_ft">6-7/ft</string>
    <string name="_50_kg">50/kg</string>
    <string name="enter_name">Enter Name</string>
    <string name="Total_items_cart">20</string>
    <string name="total_notification">10</string>
    <string name="view_reports">View Reports</string>
    <string name="march_month">mar</string>


</resources>
