<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="in.co.ragasoft.transcare.HomeActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">


            <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/toolbar_height"
                android:background="@drawable/header"
                android:minHeight="?attr/actionBarSize"
                app:navigationIcon="@drawable/menu"
                app:popupTheme="@style/AppTheme.PopupOverlay">

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/srch_toolbar_layout"
                    android:layout_width="@dimen/edittext_layout_width"
                    android:layout_height="@dimen/edittext_layout_height"
                    android:background="@drawable/location_text_background">

                    <TextView
                        android:id="@+id/location_text"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:gravity="center_vertical"
                        android:maxLines="1"
                        android:paddingLeft="5sp"
                        android:text="@string/location_text"
                        android:textColor="#d6d3d3"
                        android:textColorHint="#d6d3d3"
                        android:textSize="@dimen/location_text_size"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/view2"
                        app:layout_constraintHorizontal_bias="0.9"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <View
                        android:id="@+id/view2"
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="2dp"
                        android:layout_marginTop="8dp"
                        android:background="#d6d3d3"
                        android:paddingBottom="7sp"
                        android:paddingTop="5sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/imageView7"
                        app:layout_constraintStart_toEndOf="@+id/location_text"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="2dp"
                        android:layout_marginStart="2dp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/view2"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/google_pin"
                        tools:ignore="VectorDrawableCompat" />

                </android.support.constraint.ConstraintLayout>

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10sp">

                    <ImageView
                        android:id="@+id/myCart_"
                        android:layout_width="@dimen/cart_icon_width"
                        android:layout_height="@dimen/cart_icon_height"
                        android:layout_marginLeft="4dp"
                        android:layout_marginStart="4dp"
                        android:src="@drawable/cart"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:ignore="MissingConstraints"
                        tools:layout_editor_absoluteY="0dp" />

                    <ImageView
                        android:id="@+id/notification_image"
                        android:layout_width="@dimen/cart_icon_width"
                        android:layout_height="@dimen/cart_icon_height"
                        android:src="@drawable/notification"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.225"
                        app:layout_constraintStart_toEndOf="@+id/myCart_"
                        tools:ignore="MissingConstraints"
                        tools:layout_editor_absoluteY="0dp" />


                    <TextView
                        android:id="@+id/cartItems"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="@dimen/cart_Text_margin_left"
                        android:background="@drawable/background_cart"
                        android:gravity="center"
                        android:text="@string/Total_items_cart"
                        android:textColor="@color/white"
                        android:textSize="@dimen/notification_count_text_sixe"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/notification_image"
                        app:layout_constraintHorizontal_bias="0.6"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.07999998"
                        tools:ignore="SmallSp" />

                    <TextView
                        android:id="@+id/notificationCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/notification_count_margin_right"
                        android:gravity="center"
                        android:text="@string/total_notification"
                        android:textColor="@color/Redd"
                        android:textSize="@dimen/notification_count_text_sixe"
                        app:layout_constraintBottom_toBottomOf="@+id/notification_image"
                        app:layout_constraintEnd_toEndOf="@+id/notification_image"
                        app:layout_constraintHorizontal_bias="0.95"
                        app:layout_constraintStart_toEndOf="@+id/myCart_"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.19" />
                </android.support.constraint.ConstraintLayout>


            </android.support.v7.widget.Toolbar>


        </android.support.design.widget.AppBarLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <FrameLayout
                android:id="@+id/frame"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/bottom_view">


            </FrameLayout>


            <android.support.design.widget.BottomNavigationView
                android:id="@+id/bottom_view"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_alignParentBottom="true"
                android:background="@color/base_app_color1"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                app:itemIconTint="@color/white"
                app:itemTextColor="@color/white"
                app:menu="@menu/bottom_navigation_bar_item" />
        </RelativeLayout>

    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>
